--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,5 +15,6 @@
     <string name="title_activity_delete_item_list">DeleteItemList</string>
     <string name="title_activity_add_time_date">AddTimeDate</string>
     <string name="title_activity_edit">EditActivity</string>
+    <string name="title_activity_search">SearchActivity</string>
 
 </resources>
